--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="49dp"
             android:layout_height="wrap_content"
             android:enabled="false"
-            android:id="@+id/hitButton"/>
+            android:id="@+id/hitButton" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,15 +36,14 @@
             android:layout_width="49dp"
             android:layout_height="wrap_content"
             android:enabled="false"
-            android:id="@+id/missButton"/>
+            android:id="@+id/missButton" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:text="MISS"
-            android:textSize="18sp"
-            />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -456,5 +455,12 @@
             android:id="@+id/H8"/>
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Reset"
+        android:id="@+id/resetButton"/>
 
 </LinearLayout>
