--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -459,22 +459,23 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="50dp">
+        android:layout_height="wrap_content">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Reset"
             android:id="@+id/resetButton"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.5"
+            android:layout_margin="10dp"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Instructions"
             android:onClick="launchInstructions"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.5"
+            android:layout_margin="10dp"/>
 
     </LinearLayout>
 
